feito: terminado o css das ultimas paginas estáticas

--- a/assets/pages/blog.html
+++ b/assets/pages/blog.html
@@ -20,10 +20,13 @@
         </nav>
     </header>
     <main>
-      <h1>Como Aproveitar Melhor seu Treinamento</h1>
+      <div class="herder">     
+        <img src="../images/melhorTreino.jpg" alt="imagem de contato" class="imgTreino">
+        <h1 class="herderTiteli">Como Aproveitar Melhor seu Treinamento</h1>
+       </div>       
       <article class="blogPost">       
         <h2>Tenha uma Alimentação Saudável</h2>    
-        <p>
+        <p class="blogPost-pg">
           Confira algumas dicas para manter uma alimentação saudável e
           equilibrada, essencial para alcançar seus objetivos de fitness.
         </p>
@@ -33,7 +36,7 @@
       </article>
       <article class="blogPost">
         <h2>Benefícios do Treinamento de Força</h2>
-        <p>
+        <p class="blogPost-pg">
           Descubra os benefícios do treinamento de força para a saúde e a forma
           física, e como incluí-lo em sua rotina de exercícios.
         </p>
@@ -44,7 +47,7 @@
       </article>
       <article class="blogPost">
         <h2>Sete dicas para não desistir dos treinos na academia</h2>
-        <p>
+        <p class="blogPost-pg">
           Saiba como manter a motivação e não abandonar os exercícios físicos precocemente.
         </p>
           <button type="button" class="button">
@@ -170,13 +173,13 @@
         </div>
       </section>
       <section class="footerDisclaimer">
-            <p>
+            <p class="footerDisclaimer-pg">
                 *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"></a>
             </p>              
-            <p>
+            <p class="footerDisclaimer-pg">
                 <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
             </p>   
-            <p>
+            <p class="footerDisclaimer-pg">
                 &copy; 2023 Orange Fitness
             </p>  
       </section>     
