--- a/assets/pages/faq.html
+++ b/assets/pages/faq.html
@@ -20,32 +20,35 @@
             </ul>
         </nav>
     </header>
-    <main class="geral">
-      <h1>Perguntas Frequentes (FAQ)</h1>
+    <main>
+      <div class="herder">     
+        <img src="../images/faq.jpg" alt="imagem de contato" class="imgTreino">
+         <h1 class="herderFAQ">Perguntas Frequentes (FAQ)</h1>
+       </div> 
       <section class="faq">
-        <h2>Perguntas Frequentes</h2>
-        <h3>Como faço para me inscrever na academia?</h3>
+        
+        <h2>Como faço para me inscrever na academia?</h2>
         <p>
           Você pode se inscrever pessoalmente em nossa recepção ou preenchendo o
           formulário de inscrição online em nosso site.
         </p>
 
-        <h3>Quais são os preços das assinaturas mensais?</h3>
+        <h2>Quais são os preços das assinaturas mensais?</h2>
         <p>
           Nossos preços variam dependendo do plano escolhido. Para obter
           informações detalhadas sobre preços, entre em contato com nossa
           equipe.
         </p>
 
-        <h3>Qual é a política de cancelamento?</h3>
+        <h2>Qual é a política de cancelamento?</h2>
         <p>
           Você pode cancelar sua assinatura a qualquer momento, mas é necessário
           um aviso prévio de 30 dias. Entre em contato conosco para obter mais
           detalhes.
         </p>
 
-        <h3>Quais programas de treinamento estão disponíveis?</h3>
-        <p>
+        <h2>Quais programas de treinamento estão disponíveis?</h2>
+        <p class="faq-pg">
           Oferecemos uma variedade de programas, incluindo musculação, aulas de
           grupo, ioga, e muito mais. Consulte a seção "Programas e Serviços"
           para obter mais informações.
@@ -161,16 +164,16 @@
         </div>
       </section>
       <section class="footerDisclaimer">
-            <p>
-                *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"></a>
-            </p>              
-            <p>
-                <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
-            </p>   
-            <p>
-                &copy; 2023 Orange Fitness
-            </p>  
-      </section>     
+        <p class="footerDisclaimer-pg">
+            *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"></a>
+        </p>              
+        <p class="footerDisclaimer-pg">
+            <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
+        </p>   
+        <p class="footerDisclaimer-pg">
+            &copy; 2023 Orange Fitness
+        </p>  
+  </section>     
     </footer>
     <script src="../JS/script.js"></script>
   </body>
