--- a/assets/pages/politicas.html
+++ b/assets/pages/politicas.html
@@ -21,68 +21,63 @@
             </ul>
         </nav>
     </header>
-    <main class="geral">
-      <h1>Política de Privacidade</h1>
-      <p>
-        Esta Política de Privacidade descreve como o Orange Fitness coleta, usa
-        e protege as informações pessoais dos usuários do nosso site. Ao usar
-        este site, você concorda com as práticas descritas nesta política.
-      </p>
-      <h2>Informações Coletadas</h2>
-      <p>O Orange Fitness pode coletar as seguintes informações pessoais:</p>
-      <ul>
-        <li>Nome</li>
-        <li>Endereço de e-mail</li>
-        <li>Informações de contato</li>
-        <li>Informações de pagamento</li>
-      </ul>
-
-      <h2>Uso das Informações</h2>
-      <p>
-        As informações pessoais coletadas podem ser usadas para os seguintes
-        fins:
-      </p>
-      <ul>
-        <li>Processamento de pedidos e pagamentos</li>
-        <li>Envio de informações e atualizações</li>
-        <li>Responder a perguntas e solicitações</li>
-      </ul>
-
-      <h2>Proteção de Dados</h2>
-      <p>
-        O Orange Fitness está empenhado em proteger suas informações pessoais e
-        adota medidas de segurança adequadas para evitar o acesso não
-        autorizado, a divulgação ou a alteração dessas informações.
-      </p>
-
-      <h2>Divulgação a Terceiros</h2>
-      <p>
-        O Orange Fitness não compartilhará suas informações pessoais com
-        terceiros, a menos que seja necessário para o cumprimento de obrigações
-        legais ou para fornecer serviços solicitados por você.
-      </p>
-
-      <h2>Cookies</h2>
-      <p>
-        O site do Orange Fitness pode usar cookies para melhorar a experiência
-        do usuário. Você pode ajustar as configurações do seu navegador para
-        recusar cookies, se desejar.
-      </p>
-
-      <h2>Alterações na Política</h2>
-      <p>
-        O Orange Fitness se reserva o direito de fazer alterações nesta política
-        de privacidade a qualquer momento. As alterações serão publicadas nesta
-        página.
-      </p>
-
-      <h2>Contato</h2>
-      <p>
-        Se você tiver alguma dúvida sobre esta Política de Privacidade, entre em
-        contato conosco através do seguinte endereço de e-mail:
-        <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a
-        >.
-      </p>
+    <main>
+      <div class="herder">     
+        <img src="../images/politica-privacidade.jpg" alt="imagem de contato" class="imgPriv">
+        <h1>Política de Privacidade</h1>
+       </div> 
+       <div class="privacyPolicy">
+        <h2>Objetivo da Politica de privaciade</h2>
+        <p>
+          Esta Política de Privacidade descreve como o Orange Fitness coleta, usa e protege as informações pessoais dos usuários do nosso site. Ao usar este site, você concorda com as práticas descritas nesta política.
+        </p>
+        <h2>Informações Coletadas</h2>
+        <p>O Orange Fitness pode coletar as seguintes informações pessoais:</p>
+        <ul class="privacyPolicy-itens">
+          <li>Nome</li>
+          <li>Endereço de e-mail</li>
+          <li>Informações de contato</li>
+          <li>Informações de pagamento</li>
+        </ul>
+  
+        <h2>Uso das Informações</h2>
+        <p>
+          As informações pessoais coletadas podem ser usadas para os seguintes
+          fins:
+        </p>
+        <ul class="privacyPolicy-itens">
+          <li>Processamento de pedidos e pagamentos</li>
+          <li>Envio de informações e atualizações</li>
+          <li>Responder a perguntas e solicitações</li>
+        </ul>
+  
+        <h2>Proteção de Dados</h2>
+        <p>
+          O Orange Fitness está empenhado em proteger suas informações pessoais e adota medidas de segurança adequadas para evitar o acesso não autorizado, a divulgação ou a alteração dessas informações.
+        </p>
+  
+        <h2>Divulgação a Terceiros</h2>
+        <p>
+          O Orange Fitness não compartilhará suas informações pessoais com
+          terceiros, a menos que seja necessário para o cumprimento de obrigações legais ou para fornecer serviços solicitados por você.
+        </p>
+  
+        <h2>Cookies</h2>
+        <p>
+          O site do Orange Fitness pode usar cookies para melhorar a experiência do usuário. Você pode ajustar as configurações do seu navegador para recusar cookies, se desejar.
+        </p>
+  
+        <h2>Alterações na Política</h2>
+        <p>
+          O Orange Fitness se reserva o direito de fazer alterações nesta política de privacidade a qualquer momento. As alterações serão publicadas nesta página.
+        </p>
+  
+        <h2>Contato</h2>
+        <p>
+          Se você tiver alguma dúvida sobre esta Política de Privacidade, entre em contato conosco através do seguinte endereço de e-mail:
+          <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>.
+        </p>
+       </div>  
     </main>
     <footer class="footer">
       <section>
@@ -194,16 +189,16 @@
         </div>
       </section>
       <section class="footerDisclaimer">
-            <p>
-                *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"></a>
-            </p>              
-            <p>
-                <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
-            </p>   
-            <p>
-                &copy; 2023 Orange Fitness
-            </p>  
-      </section>     
+        <p class="footerDisclaimer-pg">
+            *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"></a>
+        </p>              
+        <p class="footerDisclaimer-pg">
+            <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
+        </p>   
+        <p class="footerDisclaimer-pg">
+            &copy; 2023 Orange Fitness
+        </p>  
+  </section>     
     </footer>
   </body>
 </html>
