--- a/assets/pages/sobre.html
+++ b/assets/pages/sobre.html
@@ -186,16 +186,16 @@
         </div>
       </section>
       <section class="footerDisclaimer">
-            <p>
-                *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"></a>
-            </p>              
-            <p>
-                <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
-            </p>   
-            <p>
-                &copy; 2023 Orange Fitness
-            </p>  
-      </section>     
+        <p class="footerDisclaimer-pg">
+            *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"></a>
+        </p>              
+        <p class="footerDisclaimer-pg">
+            <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
+        </p>   
+        <p class="footerDisclaimer-pg">
+            &copy; 2023 Orange Fitness
+        </p>  
+  </section>     
     </footer>
     <script src="../JS/script.js"></script>
   </body>
