--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -33,7 +33,7 @@
             <div class="card-body">
               <h5 class="card-title">Plano Básico</h5>
               <p class="card-text">Plano de acesso básico à academia.</p>
-              <p class="card-text">$50/mês</p>
+              <p class="card-text">R$50/mês</p>
               <button
                 class="btn btn-primary"
                 onclick="addToCart('Plano Básico', 50)"
@@ -50,7 +50,7 @@
               <p class="card-text">
                 Plano de acesso premium com treinamento personalizado.
               </p>
-              <p class="card-text">$80/mês</p>
+              <p class="card-text">R$80/mês</p>
               <button
                 class="btn btn-primary"
                 onclick="addToCart('Plano Premium', 80)"
@@ -67,7 +67,7 @@
               <p class="card-text">
                 Plano VIP com acesso ilimitado a todas as instalações.
               </p>
-              <p class="card-text">$100/mês</p>
+              <p class="card-text">R$100/mês</p>
               <button
                 class="btn btn-primary"
                 onclick="addToCart('Plano VIP', 100)"
@@ -78,17 +78,26 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6 offset-md-3">
-          <h2>Carrinho de Compras</h2>
-          <ul id="cart" class="list-group"></ul>
-          <p>Total: <span id="total">$0</span></p>
-          <button class="btn btn-success" id="checkout">
+      
+             
+      <div class="col-md-6 offset-md-3">
+        <div class="card">
+            <div class="card-body">
+              <h2 class = "card-title">Carrinho de Compras</h2>
+              <ul id="cart" class="list-group"></ul>
+            <p>Total: <span id="total">R$0</span></p>
+            <button 
+            class="btn btn-success" 
+            id="checkout"
+            >
             Finalizar Compra
-          </button>
+            </button>
+          </div>
         </div>
       </div>
     </div>
+
+
     <footer class="footer">
       <section>
         <img src="/assets/images/4.png" alt="logotipo da academia" class="footerLogo" />
