feito: começo de resposividade e menu hamburge

--- a/assets/pages/areaMembros.html
+++ b/assets/pages/areaMembros.html
@@ -12,6 +12,11 @@
     <header>
         <header class="navegation">
             <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+            <div class="menuBTN">
+              <div class="btn-line"></div>
+              <div class="btn-line"></div>
+              <div class="btn-line"></div>
+            </div>
             <nav>
                 <ul>                                 
                   <li><a href="./carrinho.html">Carrinho</a></li>
@@ -151,8 +156,9 @@
         <p class="footerDisclaimer-pg">
             &copy; 2023 Orange Fitness
         </p>  
-  </section>        
+      </section>        
     </footer>
-    <script src="../JS/script.js"></script>
+    <script src="../JS/header.js"></script>
+     <script src="../JS/script.js"></script>
   </body>
 </html>
