--- a/assets/pages/membros.html
+++ b/assets/pages/membros.html
@@ -13,6 +13,11 @@
     <header>
         <header class="navegation">
             <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+            <div class="menuBTN">
+              <div class="btn-line"></div>
+              <div class="btn-line"></div>
+              <div class="btn-line"></div>
+            </div>
             <nav>
                 <ul>                                 
                   <li><a href="./carrinho.html">Carrinho</a></li>
@@ -171,6 +176,7 @@
         </p>  
   </section>     
     </footer>
+    <script src="../JS/header.js"></script>
     <script src="../JS/script.js"></script>
   </body>
 </html>
