--- a/assets/pages/termos.html
+++ b/assets/pages/termos.html
@@ -11,15 +11,20 @@
 </head>
 <body>
   <header class="navegation">
-        <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
-        <nav>
-            <ul>               
-              <li><a href="./carrinho.html">Carrinho</a></li>
-              <li><a href="./membros.html">Membros</a></li>
-              <li><a href="./galeria.html">Galeria</a></li>
-              <li><a href="./programas.html">Programas de Treinamento</a></li>
-            </ul>
-        </nav>
+    <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+    <div class="menuBTN">
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+    </div>
+    <nav>
+      <ul class="menuLinks">               
+        <li><a href="./carrinho.html">Carrinho</a></li>
+        <li><a href="./membros.html">Membros</a></li>
+        <li><a href="./galeria.html">Galeria</a></li>
+        <li><a href="./programas.html">Programas de Treinamento</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <div class="herder">     
@@ -169,7 +174,9 @@
       <p class="footerDisclaimer-pg">
           &copy; 2023 Orange Fitness
       </p>  
-</section>     
+    </section>     
   </footer>
+  <script src="../JS/header.js"></script>
+  <script src="../JS/script.js"></script>
   </body>
 </html>
