--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   </head>
   <body>     
     <header class="navegation">      
-        <img src="./assets/images/orangelogozero.png" alt="logotipo"/>      
+      <img src="./assets/images/orangelogozero.png" alt="logotipo"/> 
+      <div class="menuBTN">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>     
       <nav>
-
         <ul>
           <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
           <li><a href="./assets/pages/membros.html">Membros</a></li>
@@ -183,5 +187,6 @@
   </section>     
     </footer>
     <script src="./assets/JS/script.js"></script>
+    <script src="../JS/header.js"></script>
   </body>
 </html>
