--- a/assets/pages/blog.html
+++ b/assets/pages/blog.html
@@ -10,6 +10,11 @@
   <body>
     <header class="navegation">
         <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+        <div class="menuBTN">
+          <div class="btn-line"></div>
+          <div class="btn-line"></div>
+          <div class="btn-line"></div>
+        </div>
         <nav>
             <ul>               
                 <li><a href="./carrinho.html">Carrinho</a></li>
@@ -184,6 +189,7 @@
             </p>  
       </section>     
     </footer>
+    <script src="../JS/header.js"></script>
     <script src="../JS/script.js"></script>
   </body>
 </html>
