--- a/assets/pages/galeria.html
+++ b/assets/pages/galeria.html
@@ -12,6 +12,11 @@
   <body>
     <header class="navegation">
         <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+        <div class="menuBTN">
+          <div class="btn-line"></div>
+          <div class="btn-line"></div>
+          <div class="btn-line"></div>
+        </div>
         <nav>
             <ul>               
                 <li><a href="./carrinho.html">Carrinho</a></li>
@@ -170,6 +175,7 @@
         </p>  
   </section>     
     </footer>
+    <script src="../JS/header.js"></script>
     <script src="../JS/script.js"></script>
   </body>
 </html>
