--- a/assets/pages/inscricao.html
+++ b/assets/pages/inscricao.html
@@ -11,6 +11,11 @@
 <body>
     <header class="navegation">
         <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+        <div class="menuBTN">
+          <div class="btn-line"></div>
+          <div class="btn-line"></div>
+          <div class="btn-line"></div>
+        </div>
         <nav>
             <ul>                                 
               <li><a href="./carrinho.html">Carrinho</a></li>
@@ -172,6 +177,7 @@
         </p>  
   </section>     
     </footer>
-    <script src="./script.js"></script>
+    <script src="../JS/header.js"></script>
+    <script src="../JS/script.js"></script>
   </body>
 </html>
