--- a/assets/pages/loginMembros.html
+++ b/assets/pages/loginMembros.html
@@ -12,6 +12,11 @@
     <header>
         <header class="navegation">
             <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+            <div class="menuBTN">
+              <div class="btn-line"></div>
+              <div class="btn-line"></div>
+              <div class="btn-line"></div>
+            </div>
             <nav>
                 <ul>                                 
                   <li><a href="../../index.html">Home</a></li>
@@ -185,6 +190,7 @@
           </p>  
     </section>     
       </footer>
-    <script src="../JS/script.js"></script>
+      <script src="../JS/header.js"></script>
+      <script src="../JS/script.js"></script>
   </body>
 </html>
