--- a/assets/pages/sobre.html
+++ b/assets/pages/sobre.html
@@ -12,6 +12,11 @@
   <body>
     <header class="navegation">
         <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+        <div class="menuBTN">
+          <div class="btn-line"></div>
+          <div class="btn-line"></div>
+          <div class="btn-line"></div>
+        </div>
         <nav>
             <ul>               
               <li><a href="./carrinho.html">Carrinho</a></li>
@@ -198,5 +203,6 @@
   </section>     
     </footer>
     <script src="../JS/script.js"></script>
+    <script src="../JS/header.js"></script>
   </body>
 </html>
