feito:terminado a responsiviadade das paginas estaticas

--- a/assets/pages/blog.html
+++ b/assets/pages/blog.html
@@ -5,29 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="shortcut icon" href="../images/3734orangelogo4.ico" type="image/x-icon">
-    <title>Blog e Notícias</title>    
+    <title>Melhore seu Treinamento</title>    
   </head>
   <body>
     <header class="navegation">
-        <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
-        <div class="menuBTN">
-          <div class="btn-line"></div>
-          <div class="btn-line"></div>
-          <div class="btn-line"></div>
-        </div>
-        <nav>
-            <ul>               
-                <li><a href="./carrinho.html">Carrinho</a></li>
-                <li><a href="./membros.html">Membros</a></li>
-                <li><a href="./galeria.html">Galeria</a></li>
-                <li><a href="./programas.html">Programas de Treinamento</a></li>
-            </ul>
-        </nav>
+      <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+      <div class="menuBTN">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
+      <nav>
+        <ul class="menuLinks">               
+          <li><a href="./carrinho.html">Carrinho</a></li>
+          <li><a href="./membros.html">Membros</a></li>
+          <li><a href="./galeria.html">Galeria</a></li>
+          <li><a href="./programas.html">Programas de Treinamento</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <div class="herder">     
-        <img src="../images/melhorTreino.jpg" alt="imagem de contato" class="imgTreino">
-        <h1 class="herderTiteli">Como Aproveitar Melhor seu Treinamento</h1>
+        <img src="../images/melhorTreino.jpg" alt="imagem de contato" class="imgTraining">
+        <h1 class="herderTraining">Como Aproveitar Melhor seu Treinamento</h1>
        </div>       
       <article class="blogPost">       
         <h2>Tenha uma Alimentação Saudável</h2>    
