--- a/assets/pages/contato.html
+++ b/assets/pages/contato.html
@@ -12,24 +12,24 @@
   </head>
   <body>
     <header class="navegation">
-        <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
-        <div class="menuBTN">
-          <div class="btn-line"></div>
-          <div class="btn-line"></div>
-          <div class="btn-line"></div>
-        </div>
-        <nav>
-            <ul>               
-                <li><a href="./carrinho.html">Carrinho</a></li>
-                <li><a href="./membros.html">Membros</a></li>
-                <li><a href="./galeria.html">Galeria</a></li>
-                <li><a href="./programas.html">Programas de Treinamento</a></li>
-            </ul>
-        </nav>
+      <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+      <div class="menuBTN">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
+      <nav>
+        <ul class="menuLinks">               
+          <li><a href="./carrinho.html">Carrinho</a></li>
+          <li><a href="./membros.html">Membros</a></li>
+          <li><a href="./galeria.html">Galeria</a></li>
+          <li><a href="./programas.html">Programas de Treinamento</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
      <div class="herder">     
-      <img src="../images/contato.jpg" alt="imagem de contato" class="imgMain">
+      <img src="../images/contato.jpg" alt="imagem de contato" class="imgContact">
        <h1>Contato</h1>
      </div>  
      <section class="contact">
