--- a/assets/pages/depoimentos.html
+++ b/assets/pages/depoimentos.html
@@ -9,25 +9,25 @@
     
 </head>
   <body>
-    <header class="navegation">      
-      <img src="../images/orangelogozero.png" alt="logotipo" />  
+    <header class="navegation">
+      <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
       <div class="menuBTN">
         <div class="btn-line"></div>
         <div class="btn-line"></div>
         <div class="btn-line"></div>
       </div>
       <nav>
-      <ul>
-        <li><a href="./carrinho.html">Carrinho</a></li>
-        <li><a href="./membros.html">Membros</a></li>
-        <li><a href="./galeria.html">Galeria</a></li>
-        <li><a href="./programas.html">Programas de Treinamento</a></li>>
-      </ul>    
-    </nav>
-</header>
+        <ul class="menuLinks">               
+          <li><a href="./carrinho.html">Carrinho</a></li>
+          <li><a href="./membros.html">Membros</a></li>
+          <li><a href="./galeria.html">Galeria</a></li>
+          <li><a href="./programas.html">Programas de Treinamento</a></li>
+        </ul>
+      </nav>
+    </header>
     <main >
       <div class="herder">     
-        <img src="../images/depoimento1.jpg" alt="imagem de contato" class="imgMain">        
+        <img src="../images/depoimento1.jpg" alt="imagem de contato" class="imgTestimony">        
         <h1>Depoimentos</h1>
       </div>
       <section class="testimony">
@@ -143,7 +143,7 @@
                   >Política de Privacidade</a>
               </li>  
             </ul>
-          </div>Programas de Treinament
+          </div>
           <div  class="footerLinkPage">
             <h2 class="footerTitler">Planos</h2>
             <ul>
@@ -173,7 +173,7 @@
         <p class="footerDisclaimer-pg">
             &copy; 2023 Orange Fitness
         </p>  
-  </section>      
+      </section>     
     </footer>
     <script src="../JS/header.js"></script>
     <script src="../JS/script.js"></script>
