--- a/assets/pages/politicas.html
+++ b/assets/pages/politicas.html
@@ -10,26 +10,26 @@
   
 </head>
 <body>
-    <header class="navegation">
-        <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
-        <div class="menuBTN">
-          <div class="btn-line"></div>
-          <div class="btn-line"></div>
-          <div class="btn-line"></div>
-        </div>
-        <nav>
-            <ul>                                 
-              <li><a href="./carrinho.html">Carrinho</a></li>
-              <li><a href="./membros.html">Membros</a></li>
-              <li><a href="./galeria.html">Galeria</a></li>
-              <li><a href="./programas.html">Programas de Treinamento</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header class="navegation">
+    <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+    <div class="menuBTN">
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+    </div>
+    <nav>
+      <ul class="menuLinks">               
+        <li><a href="./carrinho.html">Carrinho</a></li>
+        <li><a href="./membros.html">Membros</a></li>
+        <li><a href="./galeria.html">Galeria</a></li>
+        <li><a href="./programas.html">Programas de Treinamento</a></li>
+      </ul>
+    </nav>
+  </header>
     <main>
       <div class="herder">     
         <img src="../images/politica-privacidade.jpg" alt="imagem de contato" class="imgPriv">
-        <h1>Política de Privacidade</h1>
+        <h1 class="herderTitle">Política de Privacidade</h1>
        </div> 
        <div class="privacyPolicy">
         <h2>Objetivo da Politica de privaciade</h2>
