--- a/assets/pages/sobre.html
+++ b/assets/pages/sobre.html
@@ -11,20 +11,20 @@
   </head>
   <body>
     <header class="navegation">
-        <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
-        <div class="menuBTN">
-          <div class="btn-line"></div>
-          <div class="btn-line"></div>
-          <div class="btn-line"></div>
-        </div>
-        <nav>
-            <ul>               
-              <li><a href="./carrinho.html">Carrinho</a></li>
-              <li><a href="./membros.html">Membros</a></li>
-              <li><a href="./galeria.html">Galeria</a></li>
-              <li><a href="./programas.html">Programas de Treinamento</a></li>
-            </ul>
-        </nav>
+      <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+      <div class="menuBTN">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
+      <nav>
+        <ul class="menuLinks">               
+          <li><a href="./carrinho.html">Carrinho</a></li>
+          <li><a href="./membros.html">Membros</a></li>
+          <li><a href="./galeria.html">Galeria</a></li>
+          <li><a href="./programas.html">Programas de Treinamento</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <div class="herder">     
@@ -60,23 +60,23 @@
         <ul class="aboutValue">
           <li>
             <img src="../images/excelencia.png" alt="icon do nosso compromisso pela excelência de nosso trabalho">
-            Compromisso com a excelência            
+            <span class="aboutValue_span">Compromisso com a excelência</span>            
           </li>
           <li>
             <img src="../images/respeito.png" alt="icon mostra nosso compromisso ao respeito a inclusão de todos">
-            Respeito e inclusão
+            <span class="aboutValue_span">Respeito e inclusão</span>
           </li>
           <li>
             <img src="../images/inovacao.png" alt="icon mostra nosso compromisso com a inovação costante" srcset="">
-            Inovação constante
+            <span class="aboutValue_span">Inovação constante</span>
           </li>
           <li>
             <img src="../images/atendimento-ao-cliente.png" alt="icon mostra nosso compromisso como o nosso melhor atendimento">
-            Atendimento ao cliente de primeira classe
+            <span class="aboutValue_span">Atendimento ao Vip</span>
           </li>          
           <li>
             <img src="../images/bem-estar.png" alt="icon mostra nosso compromisso como a saúde e o bem-estar de todos" srcset="">
-            Cuidado com a saúde e bem-estar dos nossos clientes
+            <span class="aboutValue_span">Cuidado com a saúde e bem-estar</span>
           </li>
         </ul>
       </section>
@@ -183,9 +183,7 @@
             <ul>
               <li><a href="./blog.html">Dicas de Treino</a></li>
               <li><a href="./depoimentos.html">Depoimentos</a></li>
-              <li>
-                <a href="./faq.html">Perguntas Frequentes</a>
-              </li>
+              <li><a href="./faq.html">Perguntas Frequentes</a></li>
             </ul>
           </div>
         </div>
