--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
     <title>Orange Fitness - Home</title>
   </head>
   <body>     
-    <header class="navegation">      
-      <img src="./assets/images/orangelogozero.png" alt="logotipo"/> 
+    <header class="navegation">
+      <img src="./assets/images/orangelogozero.png" alt="logo tipo da empresa">                
       <div class="menuBTN">
         <div class="btn-line"></div>
         <div class="btn-line"></div>
         <div class="btn-line"></div>
-      </div>     
+      </div>
       <nav>
-        <ul>
-          <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
-          <li><a href="./assets/pages/membros.html">Membros</a></li>
-          <li><a href="./assets/pages/galeria.html">Galeria</a></li>
-          <li><a href="./assets/pages/programas.html">Programas de Treinamento</a></li>
+        <ul class="menuLinks">               
+          <li><a href="./carrinho.html">Carrinho</a></li>
+          <li><a href="./membros.html">Membros</a></li>
+          <li><a href="./galeria.html">Galeria</a></li>
+          <li><a href="./programas.html">Programas de Treinamento</a></li>
         </ul>
-        
       </nav>
     </header>
     <main class="geral">
@@ -184,9 +183,8 @@
         <p class="footerDisclaimer-pg">
             &copy; 2023 Orange Fitness
         </p>  
-  </section>     
+      </section>     
     </footer>
-    <script src="./assets/JS/script.js"></script>
-    <script src="../JS/header.js"></script>
+    <script src="./assets/JS/header.js"></script>
   </body>
 </html>
