--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -15,20 +15,20 @@
   </head>
   <body>
     <header class="navegation">
-        <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
-        <div class="menuBTN">
-          <div class="btn-line"></div>
-          <div class="btn-line"></div>
-          <div class="btn-line"></div>
-        </div>
-        <nav>
-            <ul>               
-                <li><a href="./carrinho.html">Carrinho</a></li>
-                <li><a href="./membros.html">Membros</a></li>
-                <li><a href="./galeria.html">Galeria</a></li>
-                <li><a href="./programas.html">Programas de Treinamento</a></li>  
-            </ul>
-        </nav>
+      <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+      <div class="menuBTN">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
+      <nav>
+        <ul class="menuLinks">               
+          <li><a href="./carrinho.html">Carrinho</a></li>
+          <li><a href="./membros.html">Membros</a></li>
+          <li><a href="./galeria.html">Galeria</a></li>
+          <li><a href="./programas.html">Programas de Treinamento</a></li>
+        </ul>
+      </nav>
     </header>
     <div class="container">
       <h1>Escolha o Seu Plano</h1>
