--- a/assets/pages/membros.html
+++ b/assets/pages/membros.html
@@ -10,24 +10,22 @@
    
 </head>
 <body>
-    <header>
-        <header class="navegation">
-            <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
-            <div class="menuBTN">
-              <div class="btn-line"></div>
-              <div class="btn-line"></div>
-              <div class="btn-line"></div>
-            </div>
-            <nav>
-                <ul>                                 
-                  <li><a href="./carrinho.html">Carrinho</a></li>
-                  <li><a href="./membros.html">Membros</a></li>
-                  <li><a href="./galeria.html">Galeria</a></li>
-                  <li><a href="./programas.html">Programas de Treinamento</a></li>
-                </ul>
-            </nav>
-        </header>
-    </header>
+  <header class="navegation">
+    <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
+    <div class="menuBTN">
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+    </div>
+    <nav>
+      <ul class="menuLinks">               
+        <li><a href="./carrinho.html">Carrinho</a></li>
+        <li><a href="./membros.html">Membros</a></li>
+        <li><a href="./galeria.html">Galeria</a></li>
+        <li><a href="./programas.html">Programas de Treinamento</a></li>
+      </ul>
+    </nav>
+  </header>
     <main class="geral">
       <h1>Área de Membros</h1>
       <section class="member-features">
