atualização rota areaMembros

--- a/assets/pages/areaMembros.html
+++ b/assets/pages/areaMembros.html
@@ -19,8 +19,8 @@
             </div>
             <nav>
                 <ul>                                 
+                  <li><a href="../../index.html">Home</a></li>
                   <li><a href="./carrinho.html">Carrinho</a></li>
-                  <li><a href="./membros.html">Membros</a></li>
                   <li><a href="./galeria.html">Galeria</a></li>
                   <li><a href="./programas.html">Programas de Treinamento</a></li>
                 </ul>
