--- a/assets/pages/contato.html
+++ b/assets/pages/contato.html
@@ -21,7 +21,7 @@
       <nav>
         <ul class="menuLinks">               
           <li><a href="./carrinho.html">Carrinho</a></li>
-          <li><a href="./membros.html">Membros</a></li>
+          <li><a href="./loginMembros.html">Membros</a></li>
           <li><a href="./galeria.html">Galeria</a></li>
           <li><a href="./programas.html">Programas de Treinamento</a></li>
         </ul>
