inclusao pix método pagamento

--- a/assets/pages/inscricao.html
+++ b/assets/pages/inscricao.html
@@ -49,6 +49,7 @@
           <label for="pagamento">Método de Pagamento:</label>
           <select id="pagamento" name="pagamento">
             <option value="cartao">Cartão de Crédito</option>
+            <option value="pix">Pix</option>
             <option value="boleto">Boleto Bancário</option>
           </select>
 
