atualização pagina_inscricao_loginMembros

--- a/assets/pages/inscricao.html
+++ b/assets/pages/inscricao.html
@@ -46,7 +46,7 @@
             <option value="plano3">Plano VIP</option>
           </select>
 
-          <label for="pagamento">Método de Pagamento:</label>
+          <label for="pagamento">Forma de Pagamento:</label>
           <select id="pagamento" name="pagamento">
             <option value="cartao">Cartão de Crédito</option>
             <option value="pix">Pix</option>
