--- a/assets/pages/loginMembros.html
+++ b/assets/pages/loginMembros.html
@@ -17,9 +17,9 @@
       <div class="btn-line"></div>
     </div>
     <nav>
-      <ul class="menuLinks">               
+      <ul class="menuLinks">
+        <li><a href="../../index.html">Home</a></li>               
         <li><a href="./carrinho.html">Carrinho</a></li>
-        <li><a href="./membros.html">Membros</a></li>
         <li><a href="./galeria.html">Galeria</a></li>
         <li><a href="./programas.html">Programas de Treinamento</a></li>
       </ul>
