--- a/assets/pages/loginMembros.html
+++ b/assets/pages/loginMembros.html
@@ -26,22 +26,21 @@
     </nav>
   </header>     
           
-      <section class="member-login">
-        <h2>Login de Membros</h2>
-        <p>
-          Seja bem-vindo à nossa Área de Membros. Faça o login para acessar
-          recursos exclusivos:
-        </p>
-        <form>
-          <label for="username">Nome de Usuário:</label>
-          <input type="text" id="username" name="username" required />
-
-          <label for="password">Senha:</label>
-          <input type="password" id="password" name="password" required />
-
-          <button type="submit">Login</button>
+       <!--SetordeNavegaçãoLogin-->
+ 
+    <div class="page">
+        <form method="POST" class="formLogin">
+            <h1>Login</h1>
+            <p>Digite os seus dados de acesso no campo abaixo.</p>
+            <label for="email">E-mail</label>
+            <input type="email" placeholder="Digite seu e-mail" autofocus="true" />
+            <label for="password">Senha</label>
+            <input type="password" placeholder="Digite sua senha" />
+            <a href="/">Esqueci minha senha</a>
+            <input type="submit" value="Acessar" class="btn" />
         </form>
-      </section>  
+    </div>
+  
                   
       <footer class="footer">
         <section>
