--- a/assets/pages/blog.html
+++ b/assets/pages/blog.html
@@ -20,7 +20,7 @@
           <li><a href="./carrinho.html">Carrinho</a></li>
           <li><a href="./loginMembros.html">Membros</a></li>
           <li><a href="./galeria.html">Galeria</a></li>
-          <li><a href="./programas.html">Programas de Treinamento</a></li>
+          <li><a href="./programas.html">Modalidades</a></li>
         </ul>
       </nav>
     </header>
