--- a/assets/pages/loginMembros.html
+++ b/assets/pages/loginMembros.html
@@ -21,7 +21,7 @@
         <li><a href="../../index.html">Home</a></li>               
         <li><a href="./carrinho.html">Carrinho</a></li>
         <li><a href="./galeria.html">Galeria</a></li>
-        <li><a href="./programas.html">Programas de Treinamento</a></li>
+        <li><a href="./programas.html">Modalidades</a></li>
       </ul>
     </nav>
   </header>     
@@ -31,7 +31,7 @@
     <div class="page">
         <form method="POST" class="formLogin">
             <h1>Login</h1>
-            <p>Digite os seus dados de acesso no campo abaixo.</p>
+            <p>Digite os seus dados de acesso no campo abaixo</p>
             <label for="email">E-mail</label>
             <input type="email" placeholder="Digite seu e-mail" autofocus="true" required/>
             <label for="password">Senha</label>
