--- a/assets/pages/inscricao.html
+++ b/assets/pages/inscricao.html
@@ -21,7 +21,7 @@
         <li><a href="./carrinho.html">Carrinho</a></li>
         <li><a href="./loginMembros.html">Membros</a></li>
         <li><a href="./galeria.html">Galeria</a></li>
-        <li><a href="./programas.html">Programas de Treinamento</a></li>
+        <li><a href="./programas.html">Modalidades</a></li>
       </ul>
     </nav>
   </header>
@@ -33,23 +33,23 @@
       <h1>Solicitação de Matrícula</h1>
       <p>Preencha os campos abaixo</p>
         
-          <label for="nome">Nome Completo:</label>
-          <input type="text" id="nome" name="nome" required />
+          <label for="nome">Nome completo</label>
+          <input type="text" id="nome" name="nome" placeholder="Nome completo" required />
 
-          <label for="email">E-mail:</label>
-          <input type="email" id="email" name="email" required />
+          <label for="email">E-mail</label>
+          <input type="email" id="email" name="email" placeholder="E-mail"required />
 
-          <label for="telefone">Telefone:</label>
-          <input type="tel" id="telefone" name="telefone" required />
+          <label for="telefone">Telefone</label>
+          <input type="tel" id="telefone" name="telefone" placeholder="Telefone" required />
 
-          <label for="plano">Escolha seu plano de assinatura:</label>
+          <label for="plano">Escolha seu plano de assinatura</label>
           <select id="plano" name="plano">
             <option value="plano1">Plano Básico</option>
             <option value="plano2">Plano Premium</option>
             <option value="plano3">Plano VIP</option>
           </select>
 
-          <label for="pagamento">Escolha sua forma de pagamento:</label>
+          <label for="pagamento">Escolha sua forma de pagamento</label>
           <select id="pagamento" name="pagamento">
             <option value="cartao">Cartão de Crédito</option>
             <option value="pix">Pix</option>
