--- a/index.html
+++ b/index.html
@@ -6,24 +6,28 @@
     <title>Orange Fitness</title>
     <link rel="stylesheet" href="./assets/CSS/style.css" />
     <link rel="shortcut icon" type="image/x-icon" href="./assets/images/3734orangelogo4.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Orange Fitness - Home</title>
   </head>
   <body>     
     <header class="navegation">
-      <img src="./assets/images/orangelogozero.png" alt="logo tipo da empresa">                
-      <div class="menuBTN">
-        <div class="btn-line"></div>
-        <div class="btn-line"></div>
-        <div class="btn-line"></div>
-      </div>
-      <nav>
-        <ul class="menuLinks">               
-          <li><a href="./carrinho.html">Carrinho</a></li>
-          <li><a href="./membros.html">Membros</a></li>
-          <li><a href="./galeria.html">Galeria</a></li>
-          <li><a href="./programas.html">Programas de Treinamento</a></li>
-        </ul>
-      </nav>
+      <img src="./assets/images/orangelogozero.png" alt="logo tipo da empresa"> 
+      <div class= "overlay" id="myNav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="menuLinks overlay-content">
+          <a href="./index.html" title="homer"></a>              
+          <a href="./assets/pages/carrinho.html" title="Produtos" class="overlay-prodoct" >Produtos</a>
+          <a href="./assets/pages/membros.html" title="Membros">Membros</a>
+          <a href="./assets/pages/galeria.html" title="Gareria de fotos">Galeria de Fotos</a>
+          <a href="./assets/pages/programas.html" title="Modalidade">Modalidades</a>
+          <a href="./assets/pages/contato.html" title="Contato">Contato</a>
+          <a href="./assets/pages/faq.html" title="perguntas frequentes"> Perguntas Frequentes</a>
+        </div>
+     </div>
+     <button class="nav-button" onclick="openNav()" title="botão de menu">
+        <i class="fa-solid fa-bars fa-2x"></i>
+     </button>
     </header>
     <main class="geral">
       <div>
