--- a/assets/pages/contato.html
+++ b/assets/pages/contato.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="shortcut icon" href="../images/3734orangelogo4.ico" 
     type="image/x-icon">
-    <script src="https://kit.fontawesome.com/f5e3366878.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Contato</title>
    
   </head>
   <body>
     <header class="navegation">
-      <img src="./assets/images/orangelogozero.png" alt="logo tipo da empresa"> 
+      <img src="../images/orangelogozero.png" alt="logo tipo da empresa"> 
       <div class= "overlay" id="myNav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="menuLinks overlay-content">
@@ -192,7 +192,7 @@
         </p>  
   </section>     
     </footer>
-    <script src="../JS/header.js"></script>
+    <script src="../JS/header.js"></>
     <script src="../JS/script.js"></script>
   </body>
 </html>
