--- a/assets/pages/termos.html
+++ b/assets/pages/termos.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../CSS/style.css">
   <link rel="shortcut icon" href="../images/3734orangelogo4.ico" type="image/x-icon">
   <title>Termos de Uso</title>
@@ -11,7 +12,7 @@
 </head>
 <body>
   <header class="navegation">
-    <img src="./assets/images/orangelogozero.png" alt="logo tipo da empresa"> 
+    <img src="../images/orangelogozero.png" alt="logo tipo da empresa"> 
     <div class= "overlay" id="myNav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <div class="menuLinks overlay-content">
