--- a/assets/pages/contato.html
+++ b/assets/pages/contato.html
@@ -11,23 +11,59 @@
    
   </head>
   <body>
-    <header class="navegation">
-      <img src="../images/orangelogozero.png" alt="logo tipo da empresa"> 
+    <header>
       <div class= "overlay" id="myNav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="menuLinks overlay-content">
-          <a href="../../index.html" title="homer"></a>              
-          <a href="./carrinho.html" title="Produtos" class="overlay-prodoct">Produtos</a>
-          <a href="./membros.html" title="Membros">Membros</a>
-          <a href="./galeria.html" title="Gareria de fotos">Galeria de Fotos</a>
-          <a href="./programas.html" title="Modalidade">Modalidades</a>
-          <a href="./contato.html" title="Contato">Contato</a>
-          <a href="./faq.html" title="perguntas frequentes"> Perguntas Frequentes</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
+        <div class="linkPrimarary">
+        <a href="tel:0800 6060 415" class="linkPrimarary-tel">TELEVENDAS 0800 6060 415</a>
+        <a href="./blog.html"  rel="noopener noreferrer">Blog</a>
+        <a href="./depoimentos.html"  rel="noopener noreferrer">Depoimentos</a>
+        <a href="./contato.html"  rel="noopener noreferrer">Contato</a>
+        </div>      
+        <div class="linkSecundary">    
+          <div class="logo">
+            <a href="../../index.html" rel="noopener noreferrer">
+              <img src="../images/orangelogozero.png" alt="logo tipo da orange academia">
+            </a>     
+          </div>       
+          <div class="search-box">
+            <input type="text" class="search-text" placeholder="Pesquisar.....">
+              <a class="search-btn">
+                <img class="loupe-blue" src="../images/loupe-blue.svg" alt="lupa de pesquisa azul" width="25px"   height="25px">
+                <img class="loupe-white" src="../images/loupe-white.svg" alt="lupa de pesquisa branca" width="25px"   height="25px">
+            </a>      
+          </div>
+        <div class="linkSecundary-button">
+          <div class="linkSecundary-button-img">
+            <img src="../images/entrar-avatar.png" alt="login-user-name">
+          </div>                
+          <div class="linkSecundary-button-menu">
+            <h3>Bem-vindo</h3>
+            <div class="linkSecundary-button-login">
+              <a href="./loginMembros.html" title="Entre">Entre</a> 
+                            ou 
+              <a href="./inscricao.html" title="Cadastre-se">Cadastre-se</a>
+            </div>   
+          </div>
+          <div class="linkSecundary-button-menu">
+            <a href="./carrinho.html" rel="noopener noreferrer"  >
+              <button type="button" title="Meu Carrinho"></button>
+                <img src="../images/carrinho-de-compra.png" alt="carinho de compra do site" width="35px">
+              </button> 
+            </a>
+          </div>     
+        </div>  
+        </div>      
+        <div class="menuLinks overlay-content">               
+          <a href="./carrinho.html">Carrinho</a></li>
+          <a href="./membros.html">Membros</a></li>
+          <a href="./galeria.html">Galeria</a></li>
+          <a href="./programas.html">Programas de Treinamento</a>
         </div>
-     </div>
-     <button class="nav-button" onclick="openNav()" title="botão de menu">
+      </div>
+      <button class="nav-button" onclick="openNav()" title="botão de menu">
         <i class="fa-solid fa-bars fa-2x"></i>
-     </button>
+      </button>
     </header>
     <main>
      <div class="herder">     
@@ -192,7 +228,7 @@
         </p>  
   </section>     
     </footer>
-    <script src="../JS/header.js"></>
+    <script src="../JS/header.js"></script>
     <script src="../JS/script.js"></script>
   </body>
 </html>
