feito: alteração de @media-query

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="linkSecundary-button-menu">
           <a href="./assets/pages/carrinho.html" rel="noopener noreferrer"  >
-            <button type="button" title="Meu Carrinho"></button>
+            <button type="button" title="Meu Carrinho">
               <img src="./assets/images/carrinho-de-compra.png" alt="carinho de compra do site" width="35px">
             </button> 
           </a>
