--- a/assets/pages/contato.html
+++ b/assets/pages/contato.html
@@ -15,10 +15,10 @@
       <div class= "overlay" id="myNav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
         <div class="linkPrimarary">
-        <a href="tel:0800 6060 415" class="linkPrimarary-tel">TELEVENDAS 0800 6060 415</a>
-        <a href="./blog.html"  rel="noopener noreferrer">Blog</a>
-        <a href="./depoimentos.html"  rel="noopener noreferrer">Depoimentos</a>
-        <a href="./contato.html"  rel="noopener noreferrer">Contato</a>
+          <a href="tel:0800 6060 415" class="linkPrimarary-tel">TELEVENDAS 0800 6060 415</a>
+          <a href="./blog.html"  rel="noopener noreferrer">Blog</a>
+          <a href="./depoimentos.html"  rel="noopener noreferrer">Depoimentos</a>
+          <a href="./contato.html"  rel="noopener noreferrer">Contato</a>
         </div>      
         <div class="linkSecundary">    
           <div class="logo">
@@ -28,31 +28,31 @@
           </div>       
           <div class="search-box">
             <input type="text" class="search-text" placeholder="Pesquisar.....">
-              <a class="search-btn">
-                <img class="loupe-blue" src="../images/loupe-blue.svg" alt="lupa de pesquisa azul" width="25px"   height="25px">
-                <img class="loupe-white" src="../images/loupe-white.svg" alt="lupa de pesquisa branca" width="25px"   height="25px">
+            <a class="search-btn">
+              <img class="loupe-blue" src="../images/loupe-blue.svg" alt="lupa de pesquisa azul" width="25px"   height="25px">
+              <img class="loupe-white" src="../images/loupe-white.svg" alt="lupa de pesquisa branca" width="25px"   height="25px">
             </a>      
           </div>
-        <div class="linkSecundary-button">
-          <div class="linkSecundary-button-img">
-            <img src="../images/entrar-avatar.png" alt="login-user-name">
-          </div>                
-          <div class="linkSecundary-button-menu">
-            <h3>Bem-vindo</h3>
-            <div class="linkSecundary-button-login">
-              <a href="./loginMembros.html" title="Entre">Entre</a> 
+          <div class="linkSecundary-button">
+            <div class="linkSecundary-button-img">
+              <img src="../images/entrar-avatar.png" alt="login-user-name">
+            </div>                
+            <div class="linkSecundary-button-menu">
+              <h3>Bem-vindo</h3>
+              <div class="linkSecundary-button-login">
+                <a href="./loginMembros.html" title="Entre">Entre</a> 
                             ou 
-              <a href="./inscricao.html" title="Cadastre-se">Cadastre-se</a>
-            </div>   
-          </div>
-          <div class="linkSecundary-button-menu">
-            <a href="./carrinho.html" rel="noopener noreferrer"  >
-              <button type="button" title="Meu Carrinho"></button>
-                <img src="../images/carrinho-de-compra.png" alt="carinho de compra do site" width="35px">
-              </button> 
-            </a>
-          </div>     
-        </div>  
+                <a href="./inscricao.html" title="Cadastre-se">Cadastre-se</a>
+              </div>   
+            </div>
+            <div class="linkSecundary-button-menu">
+              <a href="./carrinho.html" rel="noopener noreferrer"  >
+                <button type="button" title="Meu Carrinho">
+                  <img src="../images/carrinho-de-compra.png" alt="carinho de compra do site" width="35px">
+                </button> 
+              </a>
+            </div>     
+          </div>  
         </div>      
         <div class="menuLinks overlay-content">               
           <a href="./carrinho.html">Carrinho</a></li>
@@ -86,7 +86,7 @@
               <i class="fa-solid fa-envelope fa-lg" style="color: #512b1f;"></i>
               contato@orangefitness.com
             </span>      
-            <h2>Venha conhecer a nossa Academia</h2> 
+            <h2 class="contacInfo__container-conhecer">Venha conhecer a nossa Academia</h2> 
             <span>
               <i class="fa-solid fa-location-dot fa-lg" style="color: #512b1f;"></i>
               Endereço: Rua Benjamim Costanta, 960 
