--- a/assets/pages/depoimentos.html
+++ b/assets/pages/depoimentos.html
@@ -46,7 +46,7 @@
           </div>
           <div class="linkSecundary-button-menu">
             <a href="./carrinho.html" rel="noopener noreferrer"  >
-              <button type="button" title="Meu Carrinho"></button>
+              <button type="button" title="Meu Carrinho">
                 <img src="../images/carrinho-de-compra.png" alt="carinho de compra do site" width="35px">
               </button> 
             </a>
