feito: a pagina login membro e o css da mesma

--- a/assets/pages/contato.html
+++ b/assets/pages/contato.html
@@ -46,10 +46,8 @@
               </div>   
             </div>
             <div class="linkSecundary-button-menu">
-              <a href="./carrinho.html" rel="noopener noreferrer"  >
-                <button type="button" title="Meu Carrinho">
-                  <img src="../images/carrinho-de-compra.png" alt="carinho de compra do site" width="35px">
-                </button> 
+              <a href="./carrinho.html" rel="noopener noreferrer">
+                <img src="../images/carrinho-de-compra.png" alt="carinho de compra do site"> 
               </a>
             </div>     
           </div>  
