--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
         </div>
         <div class="linkSecundary-button-menu">
           <a href="./assets/pages/carrinho.html" rel="noopener noreferrer"  >
-            <button type="button" title="Meu Carrinho"></button>
-              <img src="./assets/images/carrinho-de-compra.png" alt="carinho de compra do site" width="35px">
-            </button> 
+            <img src="./assets/images/carrinho-de-compra.png" alt="carinho de compra do site">
           </a>
         </div>     
       </div>  
@@ -63,7 +61,7 @@
       <i class="fa-solid fa-bars fa-2x"></i>
     </button>
   </header>
-  <main class="geral">
+  <main>
     <div>
       <h1>Bem-vindo à Orange Fitness</h1>
     </div>      
@@ -75,7 +73,7 @@
         condicionamento físico. Oferecemos uma ampla gama de programas de
         treinamento, instrutores experientes e instalações de última geração.
         </p>
-        <img src="#" alt="imagem sobre a academia">
+        <img src="./assets/IMG/a-comprehensive-set-of-gym-weights-presented-in-highdefinition_982950-3643.jpg" alt="imagem sobre a academia" >
       </section>
     </div>
     <div>
@@ -224,5 +222,6 @@
     </section>     
   </footer>
   <script src="./assets/JS/header.js"></script>
+  <script src="./assets/JS/membros.js"></script>
 </body>
 </html>
