--- a/assets/pages/membros.html
+++ b/assets/pages/membros.html
@@ -73,11 +73,11 @@
       <div class="schedule-item__form">    
         <label for="class-name">Nome da Aula:</label>    
         <select type="text" id="class-name">
-          <option value="aula-yoga">Aula de Yoga</option>
-          <option value="aula-zumba">Aula de Zumba</option>
-          <option value="aula-pilates">Aula de Pilates</option>
-          <option value="aula-musculacao">Aula de Musculação</option>
-          <option value="aula-grupo">Aula de Grupo</option>
+          <option value="Aula de yoga">Aula de Yoga</option>
+          <option value="Aula de zumba">Aula de Zumba</option>
+          <option value="Aula de pilates">Aula de Pilates</option>
+          <option value="Aula de musculação">Aula de Musculação</option>
+          <option value="Aula em grupo">Aula em Grupo</option>
         </select> 
         <label for="class-time">Horário:</label>
         <input type="time" id="class-time">
