--- a/assets/pages/loginMembros.html
+++ b/assets/pages/loginMembros.html
@@ -203,6 +203,6 @@
   </footer>
   <script src="../JS/header.js"></script>
   <script src="../JS/script.js"></script>
-  <script src="../JS/page.js"></script>
+  <script src="../JS/login.js"></script>
 </body>
 </html>
